# storage/api-docs/api-docs.json
@@ -829,6 +829,96 @@
                 }
             }
         },
+        "/judges/{id}/update-status": {
+            "put": {
+                "tags": [
+                    "\u0421\u0443\u0434\u0434\u0456"
+                ],
+                "summary": "\u041e\u043d\u043e\u0432\u0438\u0442\u0438 \u0441\u0442\u0430\u0442\u0443\u0441 \u0441\u0443\u0434\u0434\u0456",
+                "description": "\u0412\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0438 \u043d\u043e\u0432\u0438\u0439 \u0441\u0442\u0430\u0442\u0443\u0441 \u0434\u043b\u044f \u0441\u0443\u0434\u0434\u0456, \u043d\u0430\u043f\u0440\u0438\u043a\u043b\u0430\u0434: \u0441\u0443\u0434\u0434\u044f \u0431\u0443\u0432 \u043d\u0430 \u0440\u043e\u0431\u043e\u0442\u0456, \u0456 \u043f\u0456\u0448\u043e\u0432 \u0443 \u0432\u0456\u0434\u043f\u0443\u0441\u0442\u043a\u0443",
+                "operationId": "judges-updateStatus",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "$ref": "#/parameters/Content-Type"
+                    },
+                    {
+                        "$ref": "#/parameters/X-Requested-With"
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id \u0441\u0443\u0434\u0434\u0456, \u0434\u043b\u044f \u044f\u043a\u043e\u0433\u043e \u043f\u043e\u0442\u0440\u0456\u0431\u043d\u043e \u0432\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u0438 \u043d\u043e\u0432\u0438\u0439 \u0441\u0442\u0430\u0442\u0443\u0441",
+                        "required": true,
+                        "type": "integer",
+                        "allowEmptyValue": false,
+                        "collectionFormat": "multi",
+                        "maximum": 5,
+                        "minimum": 1,
+                        "uniqueItems": true
+                    },
+                    {
+                        "name": "\u0414\u0430\u043d\u0456 \u043d\u043e\u0432\u043e\u0433\u043e \u0441\u0442\u0430\u0442\u0443\u0441\u0443",
+                        "in": "body",
+                        "description": "\u0412\u0441\u044c\u043e\u0433\u043e \u0456\u0441\u043d\u0443\u0454 5 \u0441\u0442\u0430\u0442\u0443\u0441\u0456\u0432, \u044f\u043a\u0456 \u0441\u0432\u0456\u0434\u0447\u0430\u0442\u044c \u043f\u0440\u043e \u043f\u0435\u0440\u0435\u0431\u0443\u0432\u0430\u043d\u043d\u044f \u0441\u0443\u0434\u0434\u0456 \u043d\u0430 \u0440\u043e\u0431\u043e\u0447\u043e\u043c\u0443 \u043c\u0456\u0441\u0446\u0456\n\t \t1 - \u041d\u0430 \u0440\u043e\u0431\u043e\u0442\u0456\n\t \t2 - \u041d\u0430 \u043b\u0456\u043a\u0430\u0440\u043d\u044f\u043d\u043e\u043c\u0443\n\t \t3 - \u0423 \u0432\u0456\u0434\u043f\u0443\u0441\u0442\u0446\u0456\n\t \t4 - \u0412\u0456\u0434\u0441\u0443\u0442\u043d\u0456\u0439 \u043d\u0430 \u0440\u043e\u0431\u043e\u0447\u043e\u043c\u0443 \u043c\u0456\u0441\u0446\u0456 \u0437 \u0456\u043d\u0448\u0438\u0445 \u043f\u0440\u0438\u0447\u0438\u043d\n\t \t5 - \u041f\u0440\u0438\u043f\u0438\u043d\u0435\u043d\u043e \u043f\u043e\u0432\u043d\u043e\u0432\u0430\u0436\u0435\u043d\u043d\u044f\n  *  \u0429\u043e\u0431 \u0432\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u0438 \u043d\u043e\u0432\u0438\u0439 \u0441\u0442\u0430\u0442\u0443\u0441, \u043f\u043e\u0442\u0440\u0456\u0431\u043d\u043e \u043f\u0435\u0440\u0435\u0434\u0430\u0442\u0438 id \u043d\u043e\u0432\u043e\u0433\u043e \u0441\u0442\u0430\u0442\u0443\u0441\u0443, \u0456 \u044f\u043a\u0449\u043e \u0432\u0456\u0434\u043e\u043c\u0430, \u0442\u043e \u0434\u0430\u0442\u0443 \u0434\u0456\u0457 \u0441\u0442\u0430\u0442\u0443\u0441\u0443, \u0442\u043e\u0431\u0442\u043e \u0434\u043e \u044f\u043a\u043e\u0433\u043e \u0447\u0430\u0441\u0443 \u0434\u0430\u043d\u0438\u0439 \u0441\u0442\u0430\u0442\u0443\u0441 \u0431\u0443\u0434\u0435 \u0434\u0456\u044f\u0442\u0438\n  * \u0414\u0430\u0442\u0430 \u0434\u0456\u0457 \u0441\u0442\u0430\u0442\u0443\u0441\u0443 \u0430\u043a\u0442\u0443\u0430\u043b\u044c\u043d\u0430 \u0434\u043b\u044f \u0441\u0442\u0430\u0442\u0443\u0441\u0456\u0432 2-4.  \u0414\u043b\u044f \u0441\u0442\u0430\u0442\u0443\u0441\u0456\u0432 1,5 \u0434\u0430\u0442\u0430 \u0434\u0456\u0457 \u043d\u0435 \u0432\u0440\u0430\u0445\u043e\u0432\u0443\u0454\u0442\u044c\u0441\u044f",
+                        "schema": {
+                            "required": [
+                                "set_status"
+                            ],
+                            "properties": {
+                                "set_status": {
+                                    "description": "id \u0441\u0442\u0430\u0442\u0443\u0441\u0443",
+                                    "type": "integer",
+                                    "example": "3"
+                                },
+                                "due_date": {
+                                    "description": "\u0414\u0430\u0442\u0430 \u0434\u0456\u0457 \u0441\u0442\u0430\u0442\u0443\u0441\u0443, \u0443 \u0444\u043e\u0440\u043c\u0430\u0442\u0456 Y-m-d, \u043c\u0456\u043d\u0456\u043c\u0430\u043b\u044c\u043d\u0435 \u0437\u043d\u0430\u0447\u0435\u043d\u043d\u044f, \u043f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u0434\u0435\u043d\u044c",
+                                    "type": "date",
+                                    "example": "2018-10-21"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u0421\u0442\u0430\u0442\u0443\u0441 \u0441\u0443\u0434\u0434\u0456 \u0431\u0443\u0432 \u0443\u0441\u043f\u0456\u0448\u043d\u043e \u043e\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u0439",
+                        "examples": {
+                            "application/json": {
+                                "message": "\u0421\u0442\u0430\u0442\u0443\u0441 \u0443\u0441\u043f\u0456\u0448\u043d\u043e \u043e\u043d\u043e\u0432\u043b\u0435\u043d\u043e"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "\u041d\u0435\u043e\u0431\u0445\u0456\u0434\u043d\u0430 \u0430\u0443\u0442\u0435\u043d\u0442\u0438\u0444\u0456\u043a\u0430\u0446\u0456\u044f \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430",
+                        "examples": {
+                            "application/json": {
+                                "message": "Unauthenticated"
+                            }
+                        }
+                    },
+                    "405": {
+                        "description": "\u041c\u0435\u0442\u043e\u0434, \u0437 \u044f\u043a\u0438\u043c \u0432\u0438\u043a\u043e\u043d\u0443\u0432\u0430\u0432\u0441\u044f \u0437\u0430\u043f\u0438\u0442, \u043d\u0435 \u0434\u043e\u0437\u0432\u043e\u043b\u0435\u043d\u043e \u0432\u0438\u043a\u043e\u0440\u0438\u0441\u0442\u043e\u0432\u0443\u0432\u0430\u0442\u0438 \u0434\u043b\u044f \u0437\u0430\u0434\u0430\u043d\u043e\u0433\u043e \u0440\u0435\u0441\u0443\u0440\u0441\u0443; \u043d\u0430\u043f\u0440\u0438\u043a\u043b\u0430\u0434, \u0437\u0430\u043f\u0438\u0442 \u0431\u0443\u0432 \u0437\u0434\u0456\u0439\u0441\u043d\u0435\u043d\u0438\u0439 \u0437\u0430 \u043c\u0435\u0442\u043e\u0434\u043e\u043c POST, \u0445\u043e\u0447\u0430 \u043e\u0447\u0456\u043a\u0443\u0454\u0442\u044c\u0441\u044f PUT."
+                    },
+                    "422": {
+                        "description": "\u041f\u0435\u0440\u0435\u0434\u0430\u043d\u0456 \u043d\u0435 \u0432\u0430\u043b\u0456\u0434\u043d\u0456 \u0434\u0430\u043d\u0456, \u043d\u0435\u0456\u0441\u043d\u0443\u044e\u0447\u0438\u0439 id",
+                        "examples": {
+                            "application/json": {
+                                "message": "\u041d\u0435\u0456\u0441\u043d\u0443\u044e\u0447\u0438\u0439 id"
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
+            }
+        },
         "/judges/autocomplete": {
             "get": {
                 "tags": [
@@ -964,7 +1054,7 @@
                         "description": "\u0417\u0430\u043a\u043b\u0430\u0434\u043a\u0430 \u0443\u043f\u0456\u0448\u043d\u043e \u0441\u0442\u0432\u043e\u0440\u0435\u043d\u0430",
                         "examples": {
                             "application/json": {
-                                "message": "Bookmark successfully created!"
+                                "message": "\u0417\u0430\u043a\u043b\u0430\u0434\u043a\u0430 \u0443\u0441\u043f\u0456\u0448\u043d\u043e \u0441\u0442\u0432\u043e\u0440\u0435\u043d\u0430"
                             }
                         }
                     },
